--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+021104	Support for geometry-less Atari disks
+	Support for byte-swapping disks
+021102b	Avoid .(l and .)l in generated man pages
 021102	-i flag
 	Fix mformat for 2m
 	Fix [] wildcard off-by-one error
