Document word-swapped mode.
git-svn-id: svn://svn.savannah.gnu.org/mtools/trunk@24 8fbfe7c3-7cdf-472d-ae67-d119146b2a64

--- a/mtools.texi
+++ b/mtools.texi
@@ -1085,6 +1085,12 @@ real filename using the @code{media_findname()} and
 flag is only available if you configured mtools with the
 @code{--enable-new-vold} option before compilation.
 
+@item swap
+@cindex Atari
+@cindex Wordswapped
+
+Consider the media as a word-swapped Atari disk.
+
 @item use_xdf
 @cindex XDF disks (how to configure)
 @vindex use_xdf
