Fix mpartition, so that it takes into account Solaris' vold flag
git-svn-id: svn://svn.savannah.gnu.org/mtools/trunk@29 8fbfe7c3-7cdf-472d-ae67-d119146b2a64

--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,4 @@
+021116	Fixed vold support for mpartition
 021105	Added PACKED to unicode_char declaration (Arm)
 	Mpartition can now create the image if -I is specified.
 021104	Support for geometry-less Atari disks
