Fixed mcat write problems (would not stop when writing /dev/zero to a device, no matter whether the devices size was exhausted, or even the disk containing it was full)
git-svn-id: svn://svn.savannah.gnu.org/mtools/trunk@33 8fbfe7c3-7cdf-472d-ae67-d119146b2a64

--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,5 @@
+030118	Fixed mcat end-of-file bugs (mcat went on writing, and writing,
+	and writing, even after end of file)
 030105	If "standard" CHS specified, but non-standard root dir size do not
 	use table-lookup based geometry ("old-dos media descriptor")
 021118	David's new uz script, that can use commands other than gzip for
