No locking on Cygwin
git-svn-id: svn://svn.savannah.gnu.org/mtools/trunk@70 8fbfe7c3-7cdf-472d-ae67-d119146b2a64

--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,4 @@
+040420	Cygwin patch for plain_io.c (no locking)
 040228	Fix a couple of memory leaks in config file parsing. Fix llong.h
 	(redefined same symbol twice)
 	Fix a variable initialization problem in plain_io.c
