Do no longer open floppy devices with O_EXCL, in order to enable work-around against broken cache.
git-svn-id: svn://svn.savannah.gnu.org/mtools/trunk@113 8fbfe7c3-7cdf-472d-ae67-d119146b2a64

--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+v20060228b
+	Do no longer open floppy devices with O_EXCL, in order to enable
+	work-around against broken cache.
 v20060228
 	If no info dir exists at all, assume dir
 v20060227
