--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+v20060525
+	Fix gcc4 warnings
+	Fix reading of boot sector (block size)
 v20060228b
 	Do no longer open floppy devices with O_EXCL, in order to enable
 	work-around against broken cache.
