--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,5 @@
 v20070308
-	Applied Jamey Sharp's mingw patch
+	Applied mingw patch by Jamey Sharp and Josh Triplett
 v20070306
 	Fixed doc about /etc/default
 v20070305
