Apr 11th 2007 release
git-svn-id: svn://svn.savannah.gnu.org/mtools/trunk@139 8fbfe7c3-7cdf-472d-ae67-d119146b2a64

--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,9 @@
+v20070411
+	Added sizecode printing on minfo
+	In mformat manpage, use same flag for sector number than printed in
+	minfo
+	Limit sizecode to 6, else it will overflow max sector size defined in
+	msdos.h
 v20070308
 	Applied mingw patch by Jamey Sharp and Josh Triplett
 v20070306
