Preparing for version 4.0.0_pre1
git-svn-id: svn://svn.savannah.gnu.org/mtools/trunk@217 8fbfe7c3-7cdf-472d-ae67-d119146b2a64

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,6 @@
-v20081101
+v4_0_0_pre1
 	Mtools-4 with Unicode support
+	Released 4.0.0_pre1
 v20071226
 	Debian build files
 	Fixed security issue with doctored file names
