Added missing title for the "Location information" chapter
git-svn-id: svn://svn.savannah.gnu.org/mtools/trunk@221 8fbfe7c3-7cdf-472d-ae67-d119146b2a64

--- a/mtools.texi
+++ b/mtools.texi
@@ -795,6 +795,7 @@ This is a sample drive description:
 @end example
 
 @node location information, geometry description, general information, per drive variables
+@subsection Location information
 @cindex Hdimage
 
 For each drive, you need to describe where its data is physically
