Fix version number
git-svn-id: svn://svn.savannah.gnu.org/mtools/trunk@233 8fbfe7c3-7cdf-472d-ae67-d119146b2a64

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-mtools (20081118) stable; urgency=low
+mtools (4.0.0-pre2) stable; urgency=low
 
   * Use transliteration to represent characters which don't exist in
   target set
