--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,5 @@
+v4_0_0
+	Offset for -i-specified image files
 v4_0_0_pre2
 	Use transliteration to represent characters which don't exist in
 	target set
