--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+mtools (4.0.0) stable; urgency=low
+
+  * Offset for -i-specified image files
+
+ -- Alain Knaff <alain@knaff.lu>  Sat, 29 Nov 2008 09:20:30 +0100
 mtools (4.0.0-pre2) stable; urgency=low
 
   * Use transliteration to represent characters which don't exist in
