Missing functions on Solaris
git-svn-id: svn://svn.savannah.gnu.org/mtools/trunk@237 8fbfe7c3-7cdf-472d-ae67-d119146b2a64

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+mtools (4.0.1) stable; urgency=low
+
+  * Missing functions on Solaris 
+
+ -- Alain Knaff <alain@knaff.lu>  Sun,  7 Dec 2008 21:38:55 +0100
 mtools (4.0.0) stable; urgency=low
 
   * Offset for -i-specified image files
